# bird-lang

./: CMakeLists.txt  README.md  code.bird  main.cpp  parse_testing.bird
.devcontainer/: Dockerfile
.github/workflows/: ci.yml
include/: bird_type.h  callable.h  core_call_table.h  import_env.h  import_environment.h  import_item.h  import_namespace_env.h  import_path.h  namespace.h  parse_type.h  parser.h  reorder_ast.h  semantic_value.h  stack.h  sym_table.h  token.h  type.h  type_converter.h  value.h
include/ast_node/: capturable.h  index.h  node.h
include/exceptions/: bird_exception.h  break_exception.h  continue_exception.h  return_exception.h  user_error_tracker.h  user_exception.h
include/visitors/: ast_printer.h  closure_finder.h  code_gen.h  generic_type_checker.h  generics_collector.h  hoist_visitor.h  import_visitor.h  interpreter.h  literal_limit_checker.h  monomorphization.h  name_decorator.h  output.wasm  semantic_analyzer.h  static_visitor.h  type_checker.h  visitor.h  visitor_adapter.h
src/: bird_type.cpp  callable.cpp  lexer.l  parser.yy  reorder_ast.cpp  token.cpp
tests/array_test_suite/: array_initialization_test.cpp  array_subscript_test.cpp  empty_array_test.cpp
tests/boolean_op_test_suite/: boolean_op_test  boolean_op_test.cpp  precedence_test.cpp  short_circuit_test.cpp
tests/chars_test_suite/: cast_char_test.cpp  declare_char_test.cpp
tests/const_test_suite/: const_redeclaration_test.cpp  const_with_type_test.cpp  const_without_type_test.cpp  immutability_test.cpp
tests/expr_test_suite/: expr_test.cpp
tests/first_class_functions_test_suite/: closure_test.cpp  function_reference_test.cpp  param_function_test.cpp  return_function_test.cpp
tests/for_loop_test_suite/: for_in_test.cpp  for_loop_test.cpp  scoped_for_loop_test.cpp
tests/function_test_suite/: function_calls_test.cpp  function_params_test.cpp  function_return_test.cpp
tests/gc_test_suite/: array_initialization_gc_test.cpp  assignment_gc_test.cpp  const_gc_test.cpp  index_assign_gc_test.cpp  member_assign_gc_test.cpp  parameters_gc_test.cpp  returns_gc_test.cpp  struct_initialization_gc_test.cpp  var_gc_test.cpp
tests/helpers/: compile_helper.hpp  compiler_helper.cpp  run2.js  run_wasm.js
tests/if_test_suite/: if_else_if_else_test.cpp  if_else_test.cpp  if_test.cpp
tests/import_test_suite/: import_function_test.cpp  import_function_with_from_test.cpp  import_namespace_test.cpp  import_struct_test.cpp  repeated_import_test.cpp  repeated_namespace_import_test.cpp
tests/index_assign_test_suite/: index_assign_test.cpp
tests/lexer_test_suite/: lexer_test.cpp
(+168 files in other folders)
